fix: add overflow to js-code

--- a/style.css
+++ b/style.css
@@ -146,6 +146,8 @@ html {
   border-radius: 10px;
   padding: 10px;
   width: auto;
+  overflow: auto;
+  white-space: nowrap;
 }
 .profile_img {
   width: 170px;
